# Alpha

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: button.hpp  entity.hpp  gameObject.hpp  placeholder.hpp  scene.hpp  sceneHandler.hpp  spriteObject.hpp  textObject.hpp
src/: button.cpp  entity.cpp  gameObject.cpp  main.cpp  scene.cpp  sceneHandler.cpp  spriteObject.cpp  textObject.cpp
